<resources>
    <string name="app_name">Apipet</string>
    <string name="TextoSplashScreen">Los mejores lugares para llevar a tu mascota en Rionegro</string>
    <string name="BienvenidoPantallaMain">Bienvenido a Apipet</string>
    <string name="title_activity_consid_screen">ConsidScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_pautas_mascota">PautasMascota</string>
    <string name="title_activity_map_screen">Map</string>
    <string name="InformacionExito">Exito Rionegro Dirección: Cra. 56, Rionegro, Antioquia
Horario:
miércoles	8:00–21:00
jueves	8:00–21:00
viernes	8:00–21:00
sábado	8:00–21:00
domingo	8:00–21:00
lunes	8:00–21:00
martes	8:00–21:00
Sugerir una edición
Teléfono: (4) 6152090</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="InformacionDoctorPet">
        ·Aqui puedes encontrar todo en farmacia veterinaria, tiene un servicio increble que cuenta con peluquería, consultas, examenes de laboratorio y cirugias ambulatorias.
        \n
        \n·Horario: Lunes - Sábado: 9:00 am - 6:00 pm
        \n
        \n·Teléfono: 480 24 20 
        \n
        \n·Página Web: Doctorpet.co
        \n
    </string>
    <string name="DoctorPet">Doctor Pet</string>
    <string name="InformacionCentroVeterinarioSanAntonio">
        ·Esta veterinaria tiene servicio de urgencia, cirujía, consultas en general hacen fisioterapia, oftalmología y cardiología.
        \nSon especializados en imagénología, dermatología y ortopedia.
        \n
        \n·Horario: Abierto las 24 horas
        \n
        \n·Teléfono: 320 727 3762
        \n

    </string>
    <string name="CentroVeterinarioSanAntonio">Centro veterinario San Antonio</string>
    <string name="InformacionLaGranjitaCentroVeterinario">
       ·Esta veterinaria cuenta con servicios de peluquería, guardería, cirugías y profilaxis.
        \nVenden todo tipo de productos para tu mascota.
        \n
        \n·Horario: Lunes - Sábado: 8:00 am - 6:00 pm
        \n
        \n·Teléfono: 561 61 90
        \n

    </string>
    <string name="LaGranjitaCentroVeterinario">Veterinaria La Granjita</string>
    <string name="InformacionVeterinariaCaninos">
        ·Es una veterinaria que cuenta con los servicios básicos, consultas en general, cirugías básicas como: esterilización, operaciones de tejidos blandos, etc.
        \nPara ir a esta veterinaria necesitas pedir una cita primero.
        \n
        \n·Horario: Lunes - Viernes: 8:30 - 5:30
        \nSábado: 9:00 - 1:00
        \n
        \n·Teléfono: 562 03 59
        \n
    </string>
    <string name="VeterinariaCaninos">Caninos Médicos Veterinarios</string>
    <string name="InformacionVeterinariaSanBernardo">
        ·Aqui puedes encontrar servicio de baño y peluqueria muy completa tambien incluye el profilaxis.
        \nVenta de accesorios y medicamentos
        \nSi necesitas servicio médico lo puedes encontrar a partir de las 9:00 am hasta las 5:00 pm.
        \n
        \n·Horario: Lunes - Sábado: 8:00 - 6:00 pm
        \n
        \n·Teléfono: 561 68 91
        \n
    </string>
    <string name="VeterinariaSanBernardo">Veterinaria San Bernardo</string>
    <string name="InformacionVeterinariaAgroQuirama">
        ·En este lugar puedes encontrar una gran cantidad de fármacos, tienen servicios de cirugía, odontología y adopción
        \n
        \n·Horario: Lunes - Sábado: 8:00 am - 6:00 pm
        \n
        \n·Teléfono: 532 19 26
        \n
    </string>
    <string name="VeterinariaAgroQuirama">Veterinaria Agro Quirama</string>
    <string name="InformacionAnimalLoversStore">
        ·Es una tienda de mascotas que tiene servicio de peluquería canina, consulta odontologica, hacen cirugías superficiales pero no tiene hospitalización, también tiene servicios a domicilio.
        \n
        \n·Horario:Lunes - Viernes: 9:00 am - 7:00 pm
        \nSábados: 9:00 am - 5:00 pm
        \n
        \n·Teléfono: 562 89 92
        \n
    </string>
    <string name="VeterinariaAnimalLoversStore">Animals Lovers Store</string>
    <string name="InformacionVeterinariaCVPets24Horas">
        ·Aquí puedes encontrar servicio de hospitalización, oftalmología, toda clase de cirugías, venta de medicamentos y accesorios.
        \n
        \n·Horario: Abierto las 24 horas
        \n
        \n·Teléfono: 366 49 69
        \n

        </string>
    <string name="VeterinariaCVPets24Horas">Veterinaria CVPets 24 horas</string>
    <string name="InformacionClinicaVeterinariaDelValle">
        ·Veterinaria con venta de accesorios, tiene servicios de laboratorio, cirugía de tegidos blandos, odontología, farmacia y domicilios.
        \nTiene una interesante cuenta en Instagram donde suben fotos de los pequeños peludos que visitan este hermoso lugar.
        \n
        \n·Horario: Lunes - Viernes: 8:00 am - 5:00 pm
        \nSábados: 10:00 am - 4:00 pm
        \n
        \n·Teléfono: 321 709 9928
        \n
        \n·Instagram: @ClinicaDelValle
        \n
    </string>
    <string name="ClinicaVeterinariaDelValle">Clínica Veterinaria Del Valle</string>
    <string name="InformacionKanu">
        ·Esta gran tienda tiene su propia marca de accesorios como snacks, collares, juguetes y entre otros.
        \nTienen servicio de vacunación, peluquería y cirugías menores como castración.
        \n
        \n·Horario:Lunes - Jueves: 8:00 am - 7:00 pm
        \nViernes - Sábados: 8:00 am - 7:30 pm
        \nDomingos y festivos: 8:00 am - 7:00 pm
        \n
        \n·Teléfono: 444 52 68
        \n
        \n·Página Web: www.kanu.pet
        \n
    </string>
    <string name="VeterinariaKanu">Centro de mascotas Kanú</string>
    <string name="InformacionPetland">
        ·Esta veterinaria tiene servicios de adopción, venta y compra de mascotas, servicios de cirugía, laboratorio y consulta médica.
        \ntienen su propia página web y su cuenta en instagram para que mires a sus pequeños peluditos.
        \n
        \n·Horario:Lunes - Sábado: 9:00 am - 7:00 pm
        \n
        \n·Teléfono: 448 99 68
        \n
        \n·Página Web: www.petplacestore.co
        \n
        \n·Instagram: @petplacestore
        \n
    </string>
    <string name="VeterinariaPetLand">Veterinaria PetLand</string>
    <string name="InformacionPetigree">
        ·En este maravilloso Petshop y veterinaria puedes llevar a tu mascota para que tome un baño o le corten el pelo, por si tu mascota se enferma tambien tiene servicios de cirugía y laboratorio.
        \nSi no puedes ir hasta allá, ellos tienen domicilio gratis.
        \n¡Recompensa a tu peludo con un delicioso helado exclusivo para ellos!
        \n
        \n·Horario:Lunes - Sábado: 9:00 am - 7:30 pm
        \n
        \n·Teléfono: 423 25 56
        \n
        \n·Página Web: www.petigree.com.co
        \n
    </string>
    <string name="VeterinariaPetigree">Veterinaria Petigree</string>
    <string name="ingrese_un_email">Ingrese un correo</string>
    <string name="ingrese_una_contrase_a">Ingrese una contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="tv_descripcion_raza_caninos_criollo">Un criollo es aquel que no pertenece a ninguna de las razas reconocidas por las organizaciones de los criadores. Y es que son el resultado de una crianza no selectiva.</string>
    <string name="tv_procedencia_canino_criollo">Su ascendencia es desconocida. \nReúne características de una o más razas. \nDesciende de poblaciones de animales callejeros o salvajes.</string>
    <string name="tv_estatura_peso_caninos_criollo">-Pequeños: Hasta 30cm. Su peso ronda los 15 kg.  -Medianos: Miden entre 30 y 40 cm. Pueden llegar a pesar hasta 25kg.  -Grandes: Suelen medir hasta 60cm. Pesan hasta 45kg.</string>
    <string name="tv_tiempo_vida_caninos_criollo">De 16 a 18 años, con registros de hasta 20 años.</string>
    <string name="tv_caracteristicas_caninos_criollo">Un criollo es afectuoso, dócil y juguetón y puede ser bastante agradecido con las personas que le cambiaron la vida. Ningún perro es agresivo a menos que se le maltrate.</string>
    <string name="tv_alimentacion_caninos_criollo">Depende del tamaño del perro. Para una mayor información acuda a su veterinario de confianza.</string>
    <string name="tv_nombre_raza_caninos_golden">Golden retriever</string>
    <string name="tv_descripcion_raza_caninos_golden">Los Golden Retriever son perros  muy leales a su núcleo cercano y se muestran dulces y afectuosos con sus humanos. Se llevan muy bien con los niños y, aunque en general son amistosos, también pueden ser territoriales. Por eso no debe descuidarse su socialización desde pequeños.</string>
    <string name="tv_procedencia_canino_golden">Su origen hay que buscarlo en Escocia en el siglo diecinueve, concretamente hacia 1850 y en las décadas posteriores. El Golden retriever se originó a partir solamente de perros cazadores.
        \nSabemos que la estirpe de los perros golden retriever se originó exactamente con un perdiguero dorado llamado Nous que fue comprado a un zapatero de Brighton y una Tweed Water Spanial llamada Belle.</string>
    <string name="tv_estatura_peso_caninos_golden">Miden entre 51 y 61 cm. \nPesan de 27 a 32 kg en las hembras y de 32 a 37 kg en los machos. </string>
    <string name="tv_descripcion_raza_caninos_pitbull">El American Pit Bull Terrier es una raza con una inmerecida fama de violencia y agresividad. Debido a sus orígenes (fue utilizado como perro de pelea) y al actual mal uso que le dan algunos mal dueños, no es de extrañar
        que protagonice un sinfín de leyendas urbanas en las que es pintado como un monstruo.\nContrariamente a esta creencia popular, los dueños del Pitbull afirman que es un perro de lo más cariñoso y divertido.\nes entusiasta, fiel, divertido, vital, protector y de ideas muy fijas. Asimila bien los cambios y se le considera un
        compañero excelente para los dueños que le puedan dedicar parte de su tiempo. Con los niños es muy tolerante, se dejará manosear por ellos y participará encantado en sus juegos.</string>
    <string name="tv_procedencia_canino_pitbull">Los orígenes del American Pit Bull Terrier van muy ligados a los del American Staffordshire Terrier. \nAmbas razas proceden del Staffordshire Bull Terrier, llevado desde
        Inglaterra a Estados Unidos a finales del siglo XIX. \nEste perro inglés se usaba básicamente como perro de pelea, y el prestigioso American Kennel Club rechazó su inscripción. Debido a esta negativa se fundó el United Kennel Club, para así poder registrar al que hoy conocemos como American Pit Bull Terrier.</string>
    <string name="tv_estatura_peso_caninos_pitbull">Miden entre 38 a 48 cm en los machos y de 35 a 45 cm en las hembras.\nSu peso es de 15 a 28 kg en los machos y entre 14 y 23 kg en las hembras.</string>
    <string name="tv_tiempo_vida_caninos_pitbull">Su tiempo de vida es de 8 a 15 años.</string>
    <string name="tv_caracteristicas_caninos_pitbull">El American Pit Bull Terrier es un perro ágil, atlético, fuerte y con una musculatura muy bien definida. \nTiene un cuerpo más largo que alto y una cabeza ancha. Sus orejas son de tamaño mediano y las lleva caídas. En muchos países son recortadas en forma de punta,
        pero en la mayoría no está permitido. La cola es de implantación baja, ancha en la base y se va afilando progresivamente. Su pelo es brillante, liso, corto, tieso y puede ser de todos los colores.</string>
    <string name="tv_alimentacion_caninos_pitbull">Se alimentan con unos 380 g diarios de alimento seco.</string>
</resources>