<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/info_caninos_pitbull"
    tools:context=".ui.Informacion_caninos_pitbull">
    <Button
        android:id="@+id/back_btn"
        android:layout_width="@dimen/back_btn"
        android:layout_height="@dimen/back_btn"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/icono_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nombre_raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_btn" />

            <TextView
                android:id="@+id/tv_descripcion_raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_descripcion_raza_caninos_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_raza" />

            <TextView
                android:id="@+id/tv_titulo_procedencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Procedencia:"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_descripcion_raza" />

            <TextView
                android:id="@+id/tv_procedencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_procedencia_canino_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_procedencia" />

            <TextView
                android:id="@+id/tv_titulo_estatura_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Estatura y peso:"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_procedencia" />

            <TextView
                android:id="@+id/tv_estatura_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_estatura_peso_caninos_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_estatura_peso" />

            <TextView
                android:id="@+id/tv_titulo_tiempo_vida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Tiempo de vida:"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_estatura_peso" />

            <TextView
                android:id="@+id/tv_tiempo_vida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_tiempo_vida_caninos_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_tiempo_vida" />

            <TextView
                android:id="@+id/tv_titulo_caracteristicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Características:"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tiempo_vida" />

            <TextView
                android:id="@+id/tv_caracteristicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_caracteristicas_caninos_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tiempo_vida" />

            <TextView
                android:id="@+id/tv_titulo_alimentacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_bold"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="Alimentación:"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_grande"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_caracteristicas" />

            <TextView
                android:id="@+id/tv_alimentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/varela_round"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/tv_alimentacion_caninos_pitbull"
                android:textColor="@color/textColor"
                android:textSize="@dimen/texto_pequenio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_titulo_caracteristicas" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>